# sbv2-api

./: .gitignore  Cargo.toml
sample/grpc-client/: README.md  package-lock.json  package.json  test.ts  tsconfig.json
sample/grpc-client/proto/: tts.ts
sample/grpc-client/proto/tts/: SynthesizeRequest.ts  SynthesizeResponse.ts  Tts.ts
sbv2_core/src/: jtalk.rs  main.rs
sbv2_grpc/: Cargo.toml  build.rs
sbv2_grpc/proto/: tts.proto
sbv2_grpc/src/: main.rs
